--- a/MemoryCard/style.css
+++ b/MemoryCard/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: #fff;
+  background-color: rgba(0, 103, 188, 0.85);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -150,8 +150,8 @@ h1 button {
 .add-container {
   opacity: 0;
   z-index: -1;
-  background-color: #f0f0f0;
-  border-top: 2px solid #eee;
+  /* filter: blur(30px); */
+  backdrop-filter: blur(10px);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -163,6 +163,7 @@ h1 button {
   width: 100%;
   transition: 0.3s ease;
 }
+
 .add-container.show {
   opacity: 1;
   z-index: 2;
